# pushshift_to_firehose

./: README.md  pyproject.toml
pushshift_scraper/: pushshift_scraper.py  settings.cfg
pushshift_scraper/utils/: cloudwatch.py  firehose.py  local_logs.py  pushshift_api.py
